added sections, articles and img, header and footer

--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,67 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img class="logo" src="img/logo.png" alt="Logo for LI Travels">
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <h1>LI Travels</h1>
+      <nav class="menu">
+        <ul>
+          <li><a href="https://www.technigo.io/">Home</a></li>
+          <li><a href="https://www.tjejerkodar.se/">Blog</a></li>
+          <li><a href="https://www.technigo.io/">Archives</a></li>
+          <li><a href="https://www.tjejerkodar.se/">Subscriptions</a></li>
+          <li><a href="https://www.technigo.io/">About</a></li>
+        </ul>
+      </nav>
     </header>
-
     <section class="big-news">
-      <!-- The big news content -->
+      <h2>Destination China</h2>
+      <a  href="https://www.technigo.io/program/">
+        <img src="img/China.jpg" alt="chinese pagoda">
+      </a>
+      <p> Donec eu dignissim lacus. Cras tincidunt urna vitae mauris pharetra venenatis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla facilisi. Fusce sapien ipsum, ultrices vel massa vel, pellentesque cursus quam. Vivamus quis tellus in erat eleifend tincidunt sit amet rutrum quam. Cras ullamcorper dapibus velit, vel mattis diam ornare a.</p>
     </section>
-
-    <section class="">
-      <!-- The other news  -->
+    <hr>
+    <section class="other-news">
+      <article class="article">
+        <h3>Things to do in Hvar, Croatia</h3>
+        <a href="https://www.technigo.io/program/">
+          <img src="img/Hvar.jpg" alt="stone houses">
+        </a>  
+        <p>Donec eu dignissim lacus. Cras tincidunt urna vitae mauris pharetra venenatis. Cras ullamcorper dapibus velit, vel mattis diam ornare a.</p>
+      </article>
+      <article class="article">
+        <h3>Best hikingtrails in Europe</h3>
+        <a href="https://www.technigo.io/program/">
+          <img src="img/hiking.jpg" alt="a hiker">
+        </a>
+        <p>Donec eu dignissim lacus. Donec eu dignissim lacus. Cras tincidunt urna vitae mauris pharetra venenatis. Cras tincidunt urna vitae mauris pharetra venenatis.</p>
+      </article>
+      <article class="article">
+        <h3>I learned to dive in the Caribean</h3>
+        <a href="https://www.technigo.io/program/">
+          <img src="img/diver.jpg" alt="a diver underwater">
+        </a>
+        <p>Morbi sit amet felis mollis urna fermentum elementum. Donec eu dignissim lacus. Cras tincidunt urna vitae mauris pharetra venenatis.</p>
+      </article>
+      <article class="article">
+        <h3>Why you should vacation in the desert</h3>
+        <a href="https://www.technigo.io/program/">
+          <img src="img/desert.jpg" alt="woman walking in desert">
+        </a>
+        <p>Fusce sapien ipsum, ultrices vel massa vel, pellentesque cursus quam. Vivamus quis tellus in erat eleifend tincidunt sit amet rutrum quam. Cras ullamcorper dapibus velit, vel mattis diam ornare a.</p>
+      </article>
     </section>
+    <footer>
+      <p>LI Travels<br>Suitcase Avenue 1025<br>586 42 Traveltown<br>Sweden</p>
+    </footer>
   </body>
 </html>
