update overal issues

--- a/code/index.html
+++ b/code/index.html
@@ -85,9 +85,9 @@
 
   </main>
 
-  <footer>
-    <h4><span class="copy-right">&#128024;</span>Elephant news media</h4>
-    <p><a href="https://icons8.com/icon/44024/menu">Menu icon by Icons8</a></p>
+  <footer id="footer">
+    <h4><span class="footertext">&#128024;</span>Elephant news media</h4>
+    <p><a id="link-footer" href="https://icons8.com/icon/44024/menu" target="_blank">Menu icon by Icons8</a></p>
   </footer>
 
 </body>
