made a lot of progress

--- a/code/index.html
+++ b/code/index.html
@@ -19,10 +19,10 @@
 
     <nav>
 
-      <a href="#"> Link</a>
-      <a href="#"> Link</a>
-      <a href="#"> Link</a>
-      <a href="#"> Link</a>
+      <a href="#"> ABOUT</a>
+      <a href="#"> EXPLORE</a>
+      <a href="#"> SUBSCRIBE</a>
+      <a href="#"> CONTACT</a>
 
 
     </nav>
@@ -33,67 +33,115 @@
 
   <section class="big-news">
     <!-- The big news content -->
-
-    <section>
-
+    <section class="container">
       <img src="images/happyida.JPG" alt="Class image">
-
-      <h2>Ida has started Technigo!</h2>
-
-      <p>
-        As one of 43 brave people she will tackle HTML, CSS, JavaScript and much more during
-        the next 24 weeks! "This is exciting times!" she says. <br>
-        She has happily joined team Giraffe. </p>
-
+      <div>
+        <h2>Ida has started Technigo!</h2>
+        <p>She has happily joined team Giraffe. Below you can read more
+          about<br>
+          the giraffe and tips for developers
+        </p>
+      </div>
     </section>
-
   </section>
 
   <section class="news-grid">
     <!-- The other news  -->
+    <section class="container">
 
-    <article class="news-card">
-      <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
-      <h3>Stand up is a natural part of a developers day</h3>
-      <p>Giraffes spend most of their lives standing up</p>
-    </article>
+      <article class="news-card">
 
-    <article class="news-card">
-      <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
-      <h3>The Giraffe</h3>
-    </article>
+        <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
+        <h3>Stand up is a natural part of a developers day</h3>
+        <p>Giraffes spend most of their lives standing up</p>
 
-    <article class="news-card">
-      <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
-      <h3>The Giraffe</h3>
-    </article>
+      </article>
 
-    <article class="news-card">
-      <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
-      <h3>The Giraffe</h3>
-    </article>
+      <article class="news-card">
 
+        <img src="images/team giraffe.jpg" alt="picture of several giraffes">
+        <h3>The Giraffe as a team</h3>
+        <p>You will find them in rather loose, open groups with no specific leaders
+          which will coordinate the groups movement</p>
 
+      </article>
 
+      <article class="news-card">
 
+        <img src="images/giraffe vs ida.JPG" alt="picture of a giraffe and a drawn
+       image of Ida">
+        <h3>The giraffe and Ida</h3>
+        <p>Seemingly happy and content but if needed they will use their head in a
+          fight!</p>
 
+      </article>
 
+      <article class="news-card">
 
+        <img src="images/giraffe food.jpg" alt="picture of a giraffe eating">
+        <h3>Food for thought</h3>
+        <p>The giraffe is a herbivore and eats up to 34kg of greens a day. Word of
+          advise to developers; remember to eat your greens!
+        </p>
 
+      </article>
 
+      <article class="news-card">
 
+        <img src="images/giraffe rest.jpg" alt="picture of a giraffe resting">
+        <h3>Take breaks!</h3>
+        <p>As a developer you will probably work hard, remember to rest!</p>
+
+      </article>
+
+      <article class="news-card">
+
+        <img src="images/network.jpg" alt="picture of a giraffes and zebras">
+        <h3>Network</h3>
+        <p>To become the best you can be it is crucial to build a great network</p>
+
+      </article>
+
+      <article class="news-card">
+
+        <img src="images/curious.jpg" alt="picture of a giraffe looking at a bird">
+        <h3>Stay curious!</h3>
+        <p>You will continue to learn if you look at things with curious eyes</p>
+
+      </article>
+
+      <article class="news-card">
+
+        <img src="images/have fun.jpg" alt="picture of a giraffe running next to car">
+        <h3>Have fun!</h3>
+        <p>The most important thing is to have fun!</p>
+
+      </article>
+
+      <article class="news-card">
+
+        <img src="images/have fun.jpg" alt="picture of a giraffe running next to car">
+        <h3>Have fun!</h3>
+        <p>The most important thing is to have fun!</p>
+
+      </article>
+    </section>
 
   </section>
-  <a href="#top" class="top"></a>
+
 
   <footer class="footer">
     <!-- Some info on the footer -->
+    <section class="container">
 
-    <p>Sponsored with knowledge by</p>
+      <div>
+        <h4>Made by idaabra sponsored with knowledge by</h4>
+      </div>
 
-    <a href="https://www.technigo.io">
-      <img src="logo.svg" alt="Technigo logo" style="width:42px;height:42px;border:0;">
-    </a>
+      <a href="https://www.technigo.io">
+        <img src="logo.svg" alt="Technigo logo" style="width:42px;height:42px;border:0;">
+      </a>
+    </section>
 
   </footer>
 
