--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,92 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>classic newspaper</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
+ 
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <header>        
+       <section class="header-container" >
+          <img src="divider-4715969.svg" alt="devider">
+          <h1>Classic Newspaper</h1>
+        </section>
+        <section class="the-first-container">
+          <div class="hamburger"> 
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <nav class=nav>
+            <a href="#" ></a>World</a>
+            <a href="#" ></a>Bussines</a>
+            <a href="#" ></a>Politics</a>
+            <a href="#" ></a>Sport</a>
+          <nav>
+         </section> 
+     </header>
 
+<main>
+   <!--BIG NEWS!--> 
+  <section>
     <section class="big-news">
-      <!-- The big news content -->
-    </section>
-
-    <section class="">
-      <!-- The other news  -->
-    </section>
+        <Section class="text">
+          <article> <h2>Titanic sinks four hours after hitting iceberg</h2></article> 
+          <article> <p>The Titanic started her trip from Southampton for New York on Wednesday. Late on Sunday night she struck an iceberg off the Grand Banks of Newfoundland. By wireless telegraphy she sent out signals of distress, and several liners were near enough to catch and respond to the call. <br> Conflicting news, alarming and reassuring, was current yesterday. Even after midnight it was said all the passengers were safe. All reports, of course, depended on wireless telegrams over great distances. <br> Late last night the White Star officials in New York announced that a message had been received stating that the Titanic sank at 2.20 yesterday morning after all her passengers and crew had been transferred to another vessel. Later they admitted that many lives had been lost. An unofficial message from Cape Race, Newfoundland, stated that only 675 have been saved out of 2,200 to 2,400 persons on board. </p></article>
+        </Section>
+        <section class="picture">
+          <article> <img src="1280px-RMS_Titanic_3.jpg" alt="titanic"></article> 
+        </section>
+    </section>  
+    </section> 
+      <!--SMALL NEWS!-->
+      <section>
+      <section class="small-news-container">
+        <!--här börjar det!!-->
+        <section class="small-news-card">
+          <Section class="text">
+            <article> <h2>Franz Ferdinand assassinated in Sarajevo!</h2></article> 
+            <article> <p>On Sunday, 28 June 1914, at about 10:45 am, Franz Ferdinand and his wife were assassinated in Sarajevo, the capital of the Austro-Hungarian province of Bosnia and Herzegovina. The perpetrator was 19-year-old Gavrilo Princip, a member of Young Bosnia and one of a group of assassins organized and armed by the Black Hand. <br> Earlier in the day, the couple had been attacked by Nedeljko Čabrinović, who had thrown a grenade at their car. However, the bomb detonated behind them, injuring the occupants in the following car. On arriving at the Governor's residence, Franz angrily shouted, "So this is how you welcome your guests – with bombs!". <br> After a short rest at the Governor's residence, the royal couple insisted on seeing all those who had been injured by the bomb at the local hospital. However, no one told the drivers that the itinerary had been changed. When the error was discovered, the drivers had to turn around. As the cars backed down the street and onto a side street, the line of cars stalled. At this same time, Princip was sitting at a cafe across the street. He instantly seized his opportunity and walked across the street and shot the royal couple.[34] He first shot Sophie in the abdomen and then shot Franz Ferdinand in the neck. Franz leaned over his crying wife. He was still alive when witnesses arrived to render aid. His dying words to Sophie were, "Don't die darling, live for our children." </p></article>
+          </Section>
+          <section class="picture">
+            <article> <img src="Gavrilo_Princip_captured_in_Sarajevo_1914.jpg" alt="Gavrilo_Princip_captured_in_Sarajevo_1914"></article> 
+          </section>
+        </section>  
+        <!--SMALL NEWS!-->
+        <section class="small-news-card">
+          <section class="picture">
+            <article> <img src="Alexander_Graham_Telephone_in_Newyork.jpg" alt="alexander bell"></article> 
+          </section>
+          <Section class="text">
+            <article> <h2>The first transcontinental telephone call</h2></article> 
+            <article> <p>On January 25, 1915, Alexander Graham Bell made the first transcontinental telephone call. Calling from New York City, Bell was heard by his assistant, Thomas Watson, more than 4,023 kilometers (2,500 miles) away in San Francisco: “Mr. Watson, come here, I want you.” <br> The New York Times reported:<br> ”On October 9, 1876, Alexander Graham Bell and Thomas A. Watson talked by telephone to each other over a two-mile wire stretched between Cambridge and Boston. It was the first wire conversation ever held. Yesterday afternoon [on January 25, 1915], the same two men talked by telephone to each other over a 3,400-mile wire between New York and San Francisco. Dr. Bell, the veteran inventor of the telephone, was in New York, and Mr. Watson, his former associate, was on the other side of the continent.</p></article>
+          </Section>
+        </section> 
+        <section class="small-news-card">
+          <Section class="text">
+            <article> <h2>Amelia Earhart, First Woman To Cross The Atlantic By Airplane</h2></article> 
+            <article> <p>In May 20, 1932, Amelia Earhart took off from Newfoundland; she landed in Ireland nearly 15 hours later, becoming the first woman to fly solo across the Atlantic Ocean. <br> Aviation phenomenon Amelia Earhart first made headlines in 1928 when she became the first woman to cross the Atlantic as a passenger on a trans-Atlantic airplane flight. Though she received international fame, Earhart did not think she deserved it; “I was just baggage, like a sack of potatoes,” she remarked. <br> Four years later, Earhart attempted to make the flight on her own. Just one person, Charles Lindbergh, had flown solo across the Atlantic. A female aviator, Ruth Nichols, had attempted the flight in 1931, but had crashed in Canada. <br> On May 20, 1932, five years to the day after Lindbergh’s flight, Earhart took off from Harbor Grace, Newfoundland, in her red Lockheed Vega 5B. She encountered many difficulties; “Earhart fought fatigue, a leaky fuel tank, and a cracked manifold that spewed flames out the side of the engine cowling,” writes the Smithsonian Institution’s National Air and Space Museum. “Ice formed on the Vega's wings and caused an unstoppable 3,000-foot descent to just above the waves.”</p></article>
+          </Section>
+          <section class="picture">
+            <article> <img src="pilot.jpg" alt="Amelia Earhart"></article> 
+          </section>
+        </section> 
+  <!--och här tar det slut! sektionen nedanför är för kontainer-->
+      </section>
+    </section> 
+  </section>
+        
+       </section>  
+  </main>
+     <footer>
+      <section class="the-last-container">
+        <article><p>Published by <br> ELEPHANT MEDIA</p></article>
+        <article>
+          <img src="elephant-153449_1280.png" alt="Elephant">  
+        </article>        
+      </section>
+    </footer>
   </body>
 </html>
