messed up a lot but fixed that again

--- a/code/index.html
+++ b/code/index.html
@@ -49,82 +49,85 @@
     <!-- The other news  -->
     <section class="container">
 
-      <article class="news-card">
+      <section class="small-news">
 
-        <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
-        <h3>Stand up is a natural part of a developers day</h3>
-        <p>Giraffes spend most of their lives standing up</p>
+        <article class="news-card">
 
-      </article>
+          <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
+          <h3>Stand up is a natural part of a developers day</h3>
+          <p>Giraffes spend most of their lives standing up</p>
 
-      <article class="news-card">
+        </article>
 
-        <img src="images/team giraffe.jpg" alt="picture of several giraffes">
-        <h3>The Giraffe as a team</h3>
-        <p>You will find them in rather loose, open groups with no specific leaders
-          which will coordinate the groups movement</p>
+        <article class="news-card">
 
-      </article>
+          <img src="images/team giraffe.jpg" alt="picture of several giraffes">
+          <h3>The Giraffe as a team</h3>
+          <p>You will find them in rather loose, open groups with no specific leaders
+            which will coordinate the groups movement</p>
 
-      <article class="news-card">
+        </article>
 
-        <img src="images/giraffe vs ida.JPG" alt="picture of a giraffe and a drawn
+        <article class="news-card">
+
+          <img src="images/giraffe vs ida.JPG" alt="picture of a giraffe and a drawn
        image of Ida">
-        <h3>The giraffe and Ida</h3>
-        <p>Seemingly happy and content but if needed they will use their head in a
-          fight!</p>
+          <h3>The giraffe and Ida</h3>
+          <p>Seemingly happy and content but if needed they will use their head in a
+            fight!</p>
 
-      </article>
+        </article>
 
-      <article class="news-card">
+        <article class="news-card">
 
-        <img src="images/giraffe food.jpg" alt="picture of a giraffe eating">
-        <h3>Food for thought</h3>
-        <p>The giraffe is a herbivore and eats up to 34kg of greens a day. Word of
-          advise to developers; remember to eat your greens!
-        </p>
+          <img src="images/giraffe food.jpg" alt="picture of a giraffe eating">
+          <h3>Food for thought</h3>
+          <p>The giraffe is a herbivore and eats up to 34kg of greens a day. Word of
+            advise to developers; remember to eat your greens!
+          </p>
 
-      </article>
+        </article>
 
-      <article class="news-card">
+        <article class="news-card">
 
-        <img src="images/giraffe rest.jpg" alt="picture of a giraffe resting">
-        <h3>Take breaks!</h3>
-        <p>As a developer you will probably work hard, remember to rest!</p>
+          <img src="images/giraffe rest.jpg" alt="picture of a giraffe resting">
+          <h3>Take breaks!</h3>
+          <p>As a developer you will probably work hard, remember to rest!</p>
 
-      </article>
+        </article>
 
-      <article class="news-card">
+        <article class="news-card">
 
-        <img src="images/network.jpg" alt="picture of a giraffes and zebras">
-        <h3>Network</h3>
-        <p>To become the best you can be it is crucial to build a great network</p>
+          <img src="images/network.jpg" alt="picture of a giraffes and zebras">
+          <h3>Network</h3>
+          <p>To become the best you can be it is crucial to build a great network</p>
 
-      </article>
+        </article>
 
-      <article class="news-card">
+        <article class="news-card">
 
-        <img src="images/curious.jpg" alt="picture of a giraffe looking at a bird">
-        <h3>Stay curious!</h3>
-        <p>You will continue to learn if you look at things with curious eyes</p>
+          <img src="images/curious.jpg" alt="picture of a giraffe looking at a bird">
+          <h3>Stay curious!</h3>
+          <p>You will continue to learn if you look at things with curious eyes</p>
 
-      </article>
+        </article>
 
-      <article class="news-card">
+        <article class="news-card">
 
-        <img src="images/have fun.jpg" alt="picture of a giraffe running next to car">
-        <h3>Have fun!</h3>
-        <p>The most important thing is to have fun!</p>
+          <img src="images/have fun.jpg" alt="picture of a giraffe running next to car">
+          <h3>Have fun!</h3>
+          <p>The most important thing is to have fun!</p>
 
-      </article>
+        </article>
 
-      <article class="news-card">
+        <article class="news-card">
 
-        <img src="images/have fun.jpg" alt="picture of a giraffe running next to car">
-        <h3>Have fun!</h3>
-        <p>The most important thing is to have fun!</p>
+          <img src="images/have fun.jpg" alt="picture of a giraffe running next to car">
+          <h3>Have fun!</h3>
+          <p>The most important thing is to have fun!</p>
 
-      </article>
+        </article>
+      </section>
     </section>
 
   </section>
