--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,73 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Running News</title>
+</head>
+<body>
+
     <header>
-      <!-- Some kind of logo and navbar -->
+        <img class="logo" src="https://minglebit.com/img/portfolios/app/products/gravityrunner/gravityrunner_logo.png" alt="runnerlogo"></a>
+        <h1>Running News</h1>
+        <nav class="navbar"> 
+            <a class="two" href="https://google.com">News</a>
+            <a class="three" href="https://google.com">Reviews</a>
+            <img class="navbar-logo" src="https://minglebit.com/img/portfolios/app/products/gravityrunner/gravityrunner_logo.png" alt="runnerlogo"></a>
+            <a class="four" href="https://google.com">Races</a>
+            <a class="five" href="https://google.com">Blog</a>
+        </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <section class="main-news">         
+        <img src="https://freesvg.org/img/cyberscooty-funny_carrots.png" alt="Carrots">
+        <p>
+            Motivation är det psykologiska kännetecken som ger en organism drivkraft, det vill säga väcker den till handling mot ett önskat mål och lockar fram, kontrollerar, och upprätthåller vissa målriktade handlingar. Det är den inre drivkraften bakom beteenden som vilka val man väljer, hur lång tid man tar på sig innan man kommer igång, hur stort engagemang och uthållighet man har, samt hur man känner och tänker under aktivitetens utförande.[1]
 
-    <section class="">
-      <!-- The other news  -->
+            Till exempel en individ som inte har ätit, känner hunger, och som en respons vid ätande minskas hungern. Det finns många sätt att närma sig motivation. Psykologiskt, beteendemässigt, kognitivt, och socialt.[2] Det är den avgörande faktorn vid att sättandet och uppnåendet av mål, och forskning visar att individer kan påverka sina egna nivåer av motivation och självkontroll.[3]  
+        </p>
+    </section>  
+
+    <section class="small-news">
+        <div>
+            <h2>The shoes everyone's talking about</h2>
+            <img src="https://i.ebayimg.com/images/g/9v8AAOSwBFpboC9a/s-l300.jpg" alt="">
+        </div>
+        <div>
+            <h2>10 Bucket list races</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/US_Navy_091216-N-9187B-008_A_runner_approaches_a_water-station_during_a_15-kilometer_run_through_the_Grand_Bara_Desert_in_Djibouti.jpg/731px-US_Navy_091216-N-9187B-008_A_runner_approaches_a_water-station_during_a_15-kilometer_run_through_the_Grand_Bara_Desert_in_Djibouti.jpg" alt="">
+        </div>
+        <div>
+            <h2>Running with mans best friend</h2>
+            <img src="https://www.publicdomainpictures.net/pictures/60000/nahled/dog-running-1376494189C9M.jpg" alt="">
+        </div>
+        <div>
+            <h2>What is Shinrin Yoku?</h2>
+            <img src="https://live.staticflickr.com/5744/30787705445_51339e5ed4_b.jpg" alt="">
+        </div>
+        <div>
+          <h2>The coolest shoes</h2>
+          <img src="https://i.ebayimg.com/images/g/9v8AAOSwBFpboC9a/s-l300.jpg" alt="">
+      </div>
+      <div>
+          <h2>Happy running!</h2>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/US_Navy_091216-N-9187B-008_A_runner_approaches_a_water-station_during_a_15-kilometer_run_through_the_Grand_Bara_Desert_in_Djibouti.jpg/731px-US_Navy_091216-N-9187B-008_A_runner_approaches_a_water-station_during_a_15-kilometer_run_through_the_Grand_Bara_Desert_in_Djibouti.jpg" alt="">
+      </div>
+      <div>
+          <h2>Find happiness in the moment</h2>
+          <img src="https://www.publicdomainpictures.net/pictures/60000/nahled/dog-running-1376494189C9M.jpg" alt="">
+      </div>
+      <div>
+          <h2>How to make forst walks fun</h2>
+          <img src="https://live.staticflickr.com/5744/30787705445_51339e5ed4_b.jpg" alt="">
+      </div>
+
     </section>
-  </body>
+    <footer>
+        <h5>This is a footer.</h5> 
+        <a href="https://www.instagram.com/"><img src="C:\Users\siri_\Desktop\instagramLogo.webp" alt="instagramlogo"></a>
+    </footer>
+</body>
 </html>
