can't get it to work

--- a/code/index.html
+++ b/code/index.html
@@ -54,7 +54,7 @@
         <article class="news-card">
 
           <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
-          <h3>Stand up is a natural part of a developers day</h3>
+          <h3>Start your day with a stand up</h3>
           <p>Giraffes spend most of their lives standing up</p>
 
         </article>
