I have now started over and fixed it mobile first

--- a/code/index.html
+++ b/code/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8" />
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
-  <a name="top"></a>
+
   <!-- Header -->
 
   <header class="header">
@@ -33,118 +33,102 @@
 
   <section class="big-news">
     <!-- The big news content -->
-    <section class="container">
-      <img src="images/happyida.JPG" alt="Class image">
-      <div>
-        <h2>Ida has started Technigo!</h2>
-        <p>She has happily joined team Giraffe. Below you can read more
-          about<br>
-          the giraffe and tips for developers
-        </p>
-      </div>
-    </section>
+
+    <img src="images/happyida.JPG" alt="Class image">
+
+    <h2>Ida has started Technigo and joined team giraffe!</h2>
+
   </section>
 
-  <section class="news-grid">
+  <section class="smaller-news">
     <!-- The other news  -->
-    <section class="container">
+    <article class="news-card">
 
-      <section class="small-news">
+      <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
+      <h3>Start your day with a Stand up!</h3>
+      <p>Giraffes spend most of their lives standing up</p>
 
-        <article class="news-card">
+    </article>
 
-          <img src="images/giraffeprofile.jpg" alt="picture of a giraffe">
-          <h3>Start your day with a stand up</h3>
-          <p>Giraffes spend most of their lives standing up</p>
+    <article class="news-card">
 
-        </article>
+      <img src="images/team giraffe.jpg" alt="picture of several giraffes">
+      <h3>The Giraffe as a team</h3>
+      <p>You will find them in rather loose, open groups with no specific leaders
+        which will coordinate the groups movement</p>
 
-        <article class="news-card">
+    </article>
 
-          <img src="images/team giraffe.jpg" alt="picture of several giraffes">
-          <h3>The Giraffe as a team</h3>
-          <p>You will find them in rather loose, open groups with no specific leaders
-            which will coordinate the groups movement</p>
+    <article class="news-card">
 
-        </article>
+      <img src="images/giraffe vs ida.JPG" alt="picture of a giraffe and a drawn
+     image of Ida">
+      <h3>The giraffe and Ida</h3>
+      <p>Seemingly happy and content but if needed they will use their head in a
+        fight!</p>
 
-        <article class="news-card">
+    </article>
 
-          <img src="images/giraffe vs ida.JPG" alt="picture of a giraffe and a drawn
-       image of Ida">
-          <h3>The giraffe and Ida</h3>
-          <p>Seemingly happy and content but if needed they will use their head in a
-            fight!</p>
+    <article class="news-card">
 
-        </article>
+      <img src="images/giraffe food.jpg" alt="picture of a giraffe eating">
+      <h3>Food for thought</h3>
+      <p>The giraffe is a herbivore and eats up to 34kg of greens a day. Word of
+        advise to developers; remember to eat your greens!
+      </p>
 
-        <article class="news-card">
+    </article>
 
-          <img src="images/giraffe food.jpg" alt="picture of a giraffe eating">
-          <h3>Food for thought</h3>
-          <p>The giraffe is a herbivore and eats up to 34kg of greens a day. Word of
-            advise to developers; remember to eat your greens!
-          </p>
+    <article class="news-card">
 
-        </article>
+      <img src="images/giraffe rest.jpg" alt="picture of a giraffe resting">
+      <h3>Take breaks!</h3>
+      <p>As a developer you will probably work hard, remember to rest!</p>
 
-        <article class="news-card">
+    </article>
 
-          <img src="images/giraffe rest.jpg" alt="picture of a giraffe resting">
-          <h3>Take breaks!</h3>
-          <p>As a developer you will probably work hard, remember to rest!</p>
+    <article class="news-card">
 
-        </article>
+      <img src="images/network.jpg" alt="picture of a giraffes and zebras">
+      <h3>Network</h3>
+      <p>To become the best you can be it is crucial to build a great network</p>
 
-        <article class="news-card">
+    </article>
 
-          <img src="images/network.jpg" alt="picture of a giraffes and zebras">
-          <h3>Network</h3>
-          <p>To become the best you can be it is crucial to build a great network</p>
+    <article class="news-card">
 
-        </article>
+      <img src="images/curious.jpg" alt="picture of a giraffe looking at a bird">
+      <h3>Stay curious!</h3>
+      <p>You will continue to learn if you look at things with curious eyes</p>
 
-        <article class="news-card">
+    </article>
 
-          <img src="images/curious.jpg" alt="picture of a giraffe looking at a bird">
-          <h3>Stay curious!</h3>
-          <p>You will continue to learn if you look at things with curious eyes</p>
+    <article class="news-card">
 
-        </article>
+      <img src="images/have fun.jpg" alt="picture of a giraffe running next to car">
+      <h3>Have fun!</h3>
+      <p>The most important thing is to have fun!</p>
 
-        <article class="news-card">
+    </article>
 
-          <img src="images/have fun.jpg" alt="picture of a giraffe running next to car">
-          <h3>Have fun!</h3>
-          <p>The most important thing is to have fun!</p>
+    <article class="news-card">
 
-        </article>
+      <img src="images/have fun.jpg" alt="picture of a giraffe running next to car">
+      <h3>Have fun!</h3>
+      <p>The most important thing is to have fun!</p>
 
-        <article class="news-card">
-
-          <img src="images/have fun.jpg" alt="picture of a giraffe running next to car">
-          <h3>Have fun!</h3>
-          <p>The most important thing is to have fun!</p>
-
-        </article>
-      </section>
-    </section>
+    </article>
 
   </section>
-
 
   <footer class="footer">
     <!-- Some info on the footer -->
-    <section class="container">
 
-      <div>
-        <h4>Made by idaabra sponsored with knowledge by</h4>
-      </div>
+    <h4>Made by IdaAbra, with knowledge gained from</h4>
 
-      <a href="https://www.technigo.io">
-        <img src="logo.svg" alt="Technigo logo" style="width:42px;height:42px;border:0;">
-      </a>
-    </section>
+    <a href="https://www.technigo.io">
+      <img src="logo.svg" alt="Technigo logo" style="width:42px;height:42px;border:0;">
+    </a>
 
   </footer>
 
