added part of the meta tag

--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8" />
   <title>BON'VOY Magazine</title>
   <link rel="stylesheet" href="./style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
   <link rel='icon' href='favicon.png' type='image/x-icon' />
 </head>
