changes done after code review

--- a/code/index.html
+++ b/code/index.html
@@ -9,13 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://kit.fontawesome.com/41a2006263.js" crossorigin="anonymous"></script>
-
-  <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
-
-  <!-- Some kind of logo and navbar -->
 
   <header>
     <div class="hamburger">
@@ -37,16 +33,15 @@
     </div>
 
     <div class="name">
-      <p class="name">TableTop</p>
+      TableTop
     </div>
   </header>
-
 
   <!-- The big news content -->
 
   <section class="big-news-container">
     <div class="big-news">
-      <img src="images/insta_citron_skumpa_mork_haller.jpg" class="big-news-picture" alt="Champagne image">
+      <img src="images/insta_citron_skumpa_mork_haller.jpg" class="big-news-picture" alt="Champagne">
       <a href="https://climatenewsnetwork.net/champagne/" target="_blank" rel="noopener noreferrer">
         <h2>Champagne is getting warmer due to climate change. What will happen to the fresh taste?</h2>
         <button>Read More</button>
@@ -153,7 +148,7 @@
         <a href="mailto:tabletop@tabletop.se">Send us an email</a>
       </div>
 
-      <p class="p-footer">Design by Hanna Rüter</p>
+      <p>Design by Hanna Rüter</p>
       <div class="flaticon">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
         from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
