changes done after code review

--- a/code/index.html
+++ b/code/index.html
@@ -56,7 +56,7 @@
       <a href="https://www.systembolaget.se/sok-dryck/?assortmenttext=Fast+sortiment&sellstartdatefrom=2019-12-02&sellstartdateto=2019-12-02&subcategory=Vitt+vin&sortfield=Name&fullassortment=1"
         target="_blank">
         <div>
-          <img class="small-news-picture" src="images/citron_vittvin.jpg" alt="table image">
+          <img class="small-news-picture" src="images/citron_vittvin.jpg" alt="table">
           <p>New whites in the Monopoly</p>
           <button>Read More</button>
       </a>
@@ -66,7 +66,7 @@
     <section class="small-news">
       <a href="http://www.decofleur.com/" target="_blank" rel="noopener noreferrer">
         <div>
-          <img class="small-news-picture" src="images/bukett_kvadrat.jpg" alt="flowers image">
+          <img class="small-news-picture" src="images/bukett_kvadrat.jpg" alt="flowers">
           <p>Dried flowers are in style</p>
           <button>Read More</button>
       </a>
@@ -76,7 +76,7 @@
     <section class="small-news">
       <a href="https://www.thespruceeats.com/how-to-preserve-berries-1327687" target="_blank" rel="noopener noreferrer">
         <div>
-          <img class="small-news-picture" src="images/burksommar2 kvadrat.jpg" alt="wild strawberries image">
+          <img class="small-news-picture" src="images/burksommar2 kvadrat.jpg" alt="wild strawberries">
           <p>Save the taste of summer</p>
           <button>Read More</button>
       </a>
@@ -86,7 +86,7 @@
     <section class="small-news">
       <a href="https://androuet.se/" target="_blank" rel="noopener noreferrer">
         <div>
-          <img class="small-news-picture" src="images/ost1.jpg" alt="cheese board image">
+          <img class="small-news-picture" src="images/ost1.jpg" alt="cheese board">
           <p>Cheese pairing like in France</p>
           <button>Read More</button>
       </a>
@@ -97,7 +97,7 @@
       <div id="food">
         <a href="https://www.vivavinomat.se/recept/friterade-torskbollar/" target="_blank" rel="noopener noreferrer">
           <div>
-            <img class="small-news-picture" src="images/torskbollar_insta.jpg" alt="deep fried cod image">
+            <img class="small-news-picture" src="images/torskbollar_insta.jpg" alt="deep fried cod">
             <p>Spanish tapas for the win!</p>
             <button>Read More</button>
         </a>
@@ -109,7 +109,7 @@
       <a href="https://www.vivavinomat.se/recept/restwrap-med-kalvstek-rodbetor/" target="_blank"
         rel="noopener noreferrer">
         <div>
-          <img class="small-news-picture" src="images/restwrap_insta.jpg" alt="wrap image">
+          <img class="small-news-picture" src="images/restwrap_insta.jpg" alt="wrap">
           <p>Leftover luxury wrap</p>
           <button>Read More</button>
       </a>
@@ -121,7 +121,7 @@
         <a href="https://www.systembolaget.se/sok-dryck/?subcategory=R%C3%B6tt%20vin&combinedcountry=Frankrike"
           target="_blank" rel="noopener noreferrer">
           <div>
-            <img class="small-news-picture" src="images/hostbukett_vin_insta.jpg" alt="flowers on blue table image">
+            <img class="small-news-picture" src="images/hostbukett_vin_insta.jpg" alt="flowers on blue table">
             <p>French reds for the weekend</p>
             <button>Read More</button>
         </a>
@@ -133,7 +133,7 @@
       <a href="https://www.vivavinomat.se/recept/pizzabullar-med-pesto-orter/" target="_blank"
         rel="noopener noreferrer">
         <div>
-          <img class="small-news-picture" src="images/pizzasnurror_insta2.jpg" alt="pizza buns image">
+          <img class="small-news-picture" src="images/pizzasnurror_insta2.jpg" alt="pizza buns">
           <p>Pizza Pesto Buns recipe</p>
           <button>Read More</button>
       </a>
